# shader-playground

./: .gitignore  CMakeLists.txt  README.md  ShaderPlayground.sln  ShaderPlayground.vcxproj  ShaderPlayground.vcxproj.filters  config-example.cmake
.github/: copilot-instructions.md
include/: App.hpp  modelLoader.hpp  shader.hpp  utils.hpp
res/shaders/helpers/: colorUtils.glsl
src/: App.cpp  main.cpp  modelLoader.cpp  shader.cpp  utils.cpp
